更新してみた

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Pages 動作確認ページ</title>
+    <title>GitHub Pages 動作確認ページ_Ver.2.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* カスタムスタイルはTailwindで対応できない場合にのみ使用 */
