--- a/200.html
+++ b/200.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="importmap">{"imports":{"#entry":"/_nuxt/ZoUC8MMm.js"}}</script>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ZoUC8MMm.js">
-<link rel="prefetch" as="audio" href="/_nuxt/notification.ZjDo913K.mp3">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BX_N6KGF.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BTLAn-PC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/fEzk1DPQ.js">
-<script type="module" src="/_nuxt/ZoUC8MMm.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759212841447,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2431d9f7-b14d-46b3-a0cf-bd553e23171d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="importmap">{"imports":{"#entry":"/testPage/_nuxt/ZoUC8MMm.js"}}</script>
+<link rel="modulepreload" as="script" crossorigin href="/testPage/_nuxt/ZoUC8MMm.js">
+<link rel="prefetch" as="audio" href="/testPage/_nuxt/notification.ZjDo913K.mp3">
+<link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-404.DqZyKpgk.css">
+<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BX_N6KGF.js">
+<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BTLAn-PC.js">
+<link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-500.CZqNkBuR.css">
+<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/fEzk1DPQ.js">
+<script type="module" src="/testPage/_nuxt/ZoUC8MMm.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759216429815,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testPage/",buildId:"615de654-95b0-4806-a4fa-a918ca17df86",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
