--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="importmap">{"imports":{"#entry":"/testPage/_nuxt/ZoUC8MMm.js"}}</script>
-<link rel="modulepreload" as="script" crossorigin href="/testPage/_nuxt/ZoUC8MMm.js">
+<script type="importmap">{"imports":{"#entry":"/testPage/_nuxt/DhL6__en.js"}}</script>
+<link rel="modulepreload" as="script" crossorigin href="/testPage/_nuxt/DhL6__en.js">
 <link rel="prefetch" as="audio" href="/testPage/_nuxt/notification.ZjDo913K.mp3">
 <link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-404.DqZyKpgk.css">
-<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BX_N6KGF.js">
+<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/4kTjz693.js">
 <link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BTLAn-PC.js">
 <link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-500.CZqNkBuR.css">
-<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/fEzk1DPQ.js">
-<script type="module" src="/testPage/_nuxt/ZoUC8MMm.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759216429825,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testPage/",buildId:"615de654-95b0-4806-a4fa-a918ca17df86",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/C1pGBh9l.js">
+<script type="module" src="/testPage/_nuxt/DhL6__en.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759217475968,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"53a4a8c5-bad1-4fee-a590-fcd8a4c8df7e",buildAssetsDir:"/testPage/_nuxt/",cdnURL:""}}</script></body></html>
