CDNのＵＲＬのみを設定

--- a/404.html
+++ b/404.html
@@ -3,10 +3,8 @@
 <script type="importmap">{"imports":{"#entry":"/testPage/_nuxt/ZoUC8MMm.js"}}</script>
 <link rel="modulepreload" as="script" crossorigin href="/testPage/_nuxt/ZoUC8MMm.js">
 <link rel="prefetch" as="audio" href="/testPage/_nuxt/notification.ZjDo913K.mp3">
-<link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-404.DqZyKpgk.css">
 <link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BX_N6KGF.js">
 <link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/BTLAn-PC.js">
-<link rel="prefetch" as="style" crossorigin href="/testPage/_nuxt/error-500.CZqNkBuR.css">
 <link rel="prefetch" as="script" crossorigin href="/testPage/_nuxt/fEzk1DPQ.js">
-<script type="module" src="/testPage/_nuxt/ZoUC8MMm.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759218462203,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/testPage/",buildId:"35e2ebf1-0842-4cb0-8a37-e1165550d4c2",buildAssetsDir:"/_nuxt/",cdnURL:"/testPage/"}}</script></body></html>
+<script type="module" src="/testPage/_nuxt/ZoUC8MMm.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759220586893,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"9cca2b89-0523-4ef3-a291-bcf5af2b148b",buildAssetsDir:"/_nuxt/",cdnURL:"/testPage/"}}</script></body></html>
